# qjson-py3

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: deploy.yml
src/: qjson.c  qjson.h  qjsonmodule.c
tests/: test_qjson.py
