[metadata]
name = qjson2json
version = 0.0.5
url = https://github.com/qjson/qjson-py3
maintainer = Christophe Meessen
maintainer_email = christophe@meessen.net
description = Converts QJSON, a human readable JSON, into JSON
long_description = file: README.md
long_description_content_type = text/markdown
keywords = JSON, config, QJSON
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Utilities

#[options]
#packages = qjson
#python_requires = >=3.5
